--- a/src/scss/components/_overlay.scss
+++ b/src/scss/components/_overlay.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: 3;
+  z-index: $md-overlay-z-index;
 }
 
 .md-overlay-enter {
