--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -49,7 +49,7 @@
   overflow: hidden;
   transition: width $md-transition-time;
   width: 0;
-  z-index: 5;
+  z-index: $md-sidebar-z-index;
 
   &.active {
     width: $md-sidebar-open-width;
